fix: Page title spacing. #134

--- a/assets/scss/elements/_page.scss
+++ b/assets/scss/elements/_page.scss
@@ -15,9 +15,9 @@
 
 .nv-page-title-wrap.nv-big-title h1 {
   line-height: 1.3em;
-   margin-bottom: $spacing-sm;
+  margin-bottom: $spacing-sm;
   border-bottom: $muted-border;
-  padding-bottom: 20px;
+  padding-bottom: $spacing-xs;
 }
 
 .nv-content-none-wrap {
